crates/test-files/fixtures/compile_errors/trait_not_in_scope2/src/foo.fe
trait DoThing {
  fn do();
}

trait DoOtherThing {
  fn do();
}


impl DoThing for u256 {
  fn do() {
  }
}

impl DoOtherThing for u256 {
  fn do() {
  }
}
